--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <head>
   <meta charset="utf-8">
   <title>DOMpteur</title>
-  <link href="style.css" rel="stylesheet" type="text/css">
   <script type="text/javascript" src="./DOMpteur.js"></script>
 </head>
 <body>
@@ -57,6 +56,7 @@
 --></code></pre>
   <script>
     onDOMReady(function () {
+      window.setTimeout(demos,   500, 0);
       window.setTimeout(demos,  1500, 1);
       window.setTimeout(demos,  3000, 2);
       window.setTimeout(demos,  4500, 3);
@@ -78,6 +78,10 @@
     function demos (i) {
       var args = Array.prototype.slice.call(arguments), ele;
       switch (i) {
+        case 0:
+          dompteur.addCSS('* {font-family: "Lucida Grande", "Lucida Sans Unicode", Geneva, sans-serif; }');
+          dompteur.addCSS('style.css');
+          break;
         case 1:
           $('#demoele').addHTML('<br>add HTML via Id');
           break;
@@ -139,6 +143,7 @@
           break;
         case 9:
           window.setTimeout("$('#demoencode').addAsFirst('<br/><br/>');", 1000);
+          $(' head')[0].find('style')[0].innerHTML = '';
           $('#demoencode').addHTML($('#demoele').encodeHTML() + '<br/>');
           $('#demoencode').addHTML('<div>foo</div>'.encodeHTML() + '<br/>');
           $('#demoencode').addHTML('&lt;div&gt;foo&lt/div&gt;'.decodeHTML() + '<br/>');
